# easun-smp-telemetry

./: .gitignore  .gitmodules  README.md
board/: easun-smp-telemetry.kicad_pcb  easun-smp-telemetry.kicad_prl  easun-smp-telemetry.kicad_pro  easun-smp-telemetry.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
board/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
fw/: .gitignore  Cargo.toml  Makefile  device_config.py-template  idf  manifest-dev.py  manifest.py  sdkconfig  sdkconfig.defaults  sdkconfig.old  site_config.py-template
fw-idf/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
fw-idf/components/drake-iot/: CMakeLists.txt
fw-idf/components/drake-iot/include/: drake-iot.hpp
fw-idf/components/drake-iot/include/etc/: application.hpp  (+5 more)
fw-idf/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
fw/.cargo/: config.toml
fw/app/: crc_half.py  esp_wifi.py  main.py  mqtt_call.py  virtual_timer.py
fw/app/dep/: esp_wifi.py  virtual_timer.py
fw/components/drake-iot/: CMakeLists.txt  Kconfig  application.cpp  component.cpp  console.cpp  exception.cpp  nvs.cpp  wifi.cpp
fw/components/drake-iot/include/: drake-iot-application.hpp  drake-iot-console.hpp  drake-iot-esp-error.hpp  drake-iot-nvs.hpp  drake-iot-wifi.hpp  drake-iot.hpp
fw/components/drake-iot/include/etc/: application.hpp  cmd-wifi.hpp  console.hpp  wifi.hpp
fw/easun-smp-telemetry/: Cargo.toml
fw/easun-smp-telemetry/src/: main.rs
fw/main/: Kconfig.projbuild  idf_component.yml  main.c  main.c-bak  main.cpp
fw/src/: main.rs  main.rs-exampl  main.rs-my
