[package]
name = "easun_smp_telemetry"
version = "0.1.0"
authors = ["Pavel Burgr <pb@drake.cz>"]
edition = "2021"
license = "MIT"

[dependencies]
riscv-rt = "0.10.0"
esp32c3-hal = { version = "0.3.0", features = ["async", "embassy", "embassy-time-systick"] }
esp-backtrace = { version = "0.4.0", features = ["esp32c3", "exception-handler", "panic-handler", "print-jtag-serial"] }
esp-println       = { version = "0.3.1", features = ["esp32c3"], default-features = false }
embassy-time       = { version = "0.1.0", features = ["nightly"] }
embassy-executor = { version = "0.1.1", features = ["nightly", "integrated-timers"] }
