[package]
name = "easun_smp_telemetry"
version = "0.1.0"
authors = ["Pavel Burgr <pb@drake.cz>"]
edition = "2021"
license = "MIT"

[dependencies]
riscv-rt = "0.10.0"
esp32c3-hal = { git = "https://github.com/esp-rs/esp-hal", features = ["embassy", "embassy-time-systick"] }
esp-backtrace = { version = "0.4.0", features = ["esp32c3", "exception-handler", "panic-handler", "print-jtag-serial"] }
esp-println       = { version = "0.3.1", features = ["esp32c3"], default-features = false }
embassy-time       = { version = "0.1.0", features = ["nightly"] }
embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "eed34f9", features = ["nightly", "integrated-timers"] }
